[gd_scene load_steps=10 format=2]

[ext_resource path="res://SpriteFrames/Scout.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/Scout.gd" type="Script" id=2]
[ext_resource path="res://sounds/scree.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/scout_die.wav" type="AudioStream" id=4]

[sub_resource type="OccluderPolygon2D" id=1]
cull_mode = 1
polygon = PoolVector2Array( -1, -11, -4, -8, -4, 11, -2, 14, 2, 14, 3, 8, 3, -8 )

[sub_resource type="CapsuleShape2D" id=2]
height = 8.0

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.631373, 0.0392157, 0.588235 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.588235 )

[node name="Scout" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 1 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="VisionCone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="VisionCone"]
use_parent_material = true
polygon = PoolVector2Array( -130, -250, 130, -250, 0, 7 )

[node name="BloodHit" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
explosiveness = 0.93
local_coords = false
emission_shape = 1
emission_sphere_radius = 4.92
gravity = Vector2( 0, 0 )
initial_velocity = 180.0
initial_velocity_random = 0.8
scale_amount = 5.0
scale_amount_random = 0.8
color = Color( 0.231373, 1, 0.188235, 1 )

[node name="BloodDeath" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
lifetime = 0.2
local_coords = false
emission_shape = 1
emission_sphere_radius = 4.92
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 180.0
initial_velocity_random = 0.8
scale_amount = 5.0
scale_amount_random = 0.8
color = Color( 0.231373, 1, 0.188235, 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enable = true

[node name="HealthBar" type="Node2D" parent="CanvasLayer"]
material = SubResource( 5 )

[node name="Bar" type="ProgressBar" parent="CanvasLayer/HealthBar"]
light_mask = 4
use_parent_material = true
margin_left = -16.0
margin_top = -19.0
margin_right = 16.0
margin_bottom = -15.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 1.0
value = 1.0
percent_visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.338
max_distance = 1500.0
attenuation = 1.86607

[node name="AudioStreamPlayer2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -13.38
max_distance = 1500.0
attenuation = 1.86607

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="VisionCone" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
